migrating to postgress

--- a/.env
+++ b/.env
@@ -2,11 +2,13 @@ SECRET_KEY=change-me
 DEBUG=True
 ALLOWED_HOSTS=127.0.0.1,localhost
 
-DB_NAME=your_db
-DB_USER=your_user
-DB_PASSWORD=your_password
-DB_HOST=localhost
-DB_PORT=5432
+DATA_BASE=postgres
+DB_USER=postgres.ocqknyfbkndjbziurggj
+DB_PASSWORD=study-fun@800
+DB_HOST=aws-1-sa-east-1.pooler.supabase.com
+DB_PORT=6543
+POOL_MODE=transaction
+DB_NAME=postgres
 
 # Optional: move your AI key out of code
 OPENROUTER_API_KEY=sk-xxxxx
