--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ idna==3.10
 lxml==6.0.0
 packaging==25.0
 pillow==11.3.0
+psycopg2-binary==2.9.10
 PyJWT==2.10.1
 PyPDF2==3.0.1
 python-decouple==3.8
